--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.0",
     "react-bootstrap": "^2.10.3",
